Using input file.csv with data Checked result balance